update index>add selectors points

--- a/index.html
+++ b/index.html
@@ -9,9 +9,39 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="screen">
     <h1> Serphp </h1>
     <button class="btn" id="start-btn"> Test DPI </button>
+    </div>
+    //ul.choose-point*3>li*1
+    <div class="screen">
+        <h1> Choose your pointer </h1>
+        <ul class="choose-point-list">
+            <li>
+                <button class="choose-point-btn">
+                <img src="" alt="">
+                <p>Hola 1</p>
+            </button>
+            </li>
+            //
+            <li>
+        <button class="choose-point-btn">
+                <img src="" alt="">
+                <p>Hola 2</p>
+            </button>
+            </li>
+
+            //
+            <li>
+        <button class="choose-point-btn">
+                <img src="" alt="">
+                <p>Hola 3</p>
+            </button>
+            </li>
+
+            //
+        </ul>
+    </div>
     //JS
     <script src="script.js"></script>
 </body>
